Entrega final proyecto React e-commerce

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--(punto de entrada real, este archivo es el HTML base)-->
 <!doctype html>
 <html lang="en">
   <head>
@@ -7,7 +8,8 @@
     <title>creatulanding1_cataldo</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"></div> <!--React necesita un lugar donde “inyectarse”
+Todo React se renderiza dentro de #root-->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
